# netsu

./: .dockerignore  .gitignore  LICENSE  PROTOCOL.md  README.md  bun.lockb  package.json
.github/workflows/: ci.yml  e2e.yml  publish.yml
.repowiki/en/content/: System Overview.md
.repowiki/en/content/Architecture/: Protocol and Interoperability.md
.repowiki/en/content/Services/: Cross-device TUI.md  Multiplexing Lab.md  Rust Implementation.md
.repowiki/en/meta/: repowiki-metadata.json
apps/rendez-key/: .dev.vars.example  .gitignore  README.md  package.json  rendezkey-implementation-plan.md  rendezkey-prd.md  tsconfig.build.json  tsconfig.json  vitest.config.ts  worker-configuration.d.ts  wrangler.jsonc
apps/rendez-key/migrations/: 0000_tricky_shooting_star.sql
apps/rendez-key/migrations/meta/: 0000_snapshot.json  _journal.json
apps/rendez-key/scripts/: build-types.sh  signal-smoke-test.mjs  smoke-test.sh  test-signal-workerd.sh
apps/rendez-key/src/: app.ts  index.ts  scheduled.ts
apps/rendez-key/src/db/: schema.ts
apps/rendez-key/src/domain/: code.ts  limits.ts
apps/rendez-key/src/http/: auth.ts  errors.ts  headers.ts  signal-auth.ts
apps/rendez-key/src/openapi/: schemas.ts
apps/rendez-key/src/repositories/: entries.ts
apps/rendez-key/src/routes/: claim-entry.ts  connect-signal-room.ts  create-entry.ts  create-signal-room.ts  health.ts
apps/rendez-key/src/signal/: limits.ts  protocol.ts  room.ts  secret.ts
apps/rendez-key/src/types/: global.d.ts
apps/rendez-key/test/: claim-entry.test.ts  code.test.ts  concurrent-claim.test.ts  create-entry.test.ts  health.test.ts  http-helpers.test.ts  open-mode.test.ts  openapi.test.ts  repository.test.ts  rpc-client.test.ts  scheduled.test.ts  signal-protocol.test.ts  signal-room.test.ts  signal-routes.test.ts
apps/rendez-key/test/fixtures/: signal-v1.json
docs/: dependency-security-policy.md
docs/plans/: 2026-07-22-cloudflare-webrtc-signaling.md  2026-07-22-native-quic-implementation.md  2026-07-22-rendez-key-migration.md  2026-07-22-webrtc-implementation.md
docs/release/: webrtc-public-smoke.md
docs/specs/: 2026-07-22-quic-webrtc-transports.md  2026-07-22-quic-webrtc-tui.md
docs/superpowers/plans/: 2026-07-20-netsu-e2e-ci.md  2026-07-20-netsu-rust-impl.md  2026-07-20-netsu-ts-rewrite.md  2026-07-21-iroh-transport-and-mux-lab.md
docs/superpowers/specs/: 2026-07-20-netsu-rewrite-design.md  2026-07-21-iroh-transport-and-mux-lab-design.md
go/: go.mod
go/cmd/netsu/: main.go
go/pkg/netsu/: base.go  netsu.go  tcp.go  types.go
interop/: Dockerfile.iperf3  Dockerfile.rs  Dockerfile.ts  README.md  build-rust.sh  docker-compose.yml  e2e.sh  run-matrix.ts
interop/transports/: Dockerfile.rs  Dockerfile.signal  README.md  docker-compose.quic.yml  docker-compose.yml  e2e-quic.sh  e2e.sh  netem-entrypoint.sh  netem-profiles.json  run-quic-matrix.test.ts  run-quic-matrix.ts  run-webrtc-matrix.test.ts  run-webrtc-matrix.ts
interop/transports/browser/: Dockerfile  README.md  browser-peer.js  package-lock.json  package.json  playwright.config.mjs  run-browser-peer.mjs
interop/transports/browser/tests/: browser-peer.spec.mjs
netsu-rs/: Cargo.toml  README.md
netsu-rs/examples/: kbm-demo.rs  write_mux_schema.rs
netsu-rs/mux-docker/: Dockerfile  docker-compose.yml  entrypoint.sh  netem-profiles.json
netsu-rs/schema/: mux-result-v1.json
netsu-rs/scripts/: mux-matrix.sh  verify.sh
netsu-rs/src/: client.rs  crypto.rs  error.rs  format.rs  lib.rs  main.rs  mux_cli.rs  server.rs  stats.rs  tui.rs
netsu-rs/src/demo/: input.rs  mod.rs  monio_backend.rs  session.rs
netsu-rs/src/mux/: config.rs  matrix.rs  metrics.rs  mod.rs  netem.rs  output.rs  protocol.rs  receiver.rs  resources.rs  result.rs  runner.rs  workload.rs
netsu-rs/src/p2p/: addr.rs  endpoint.rs  mod.rs  observe.rs  rendezkey.rs
netsu-rs/src/protocol/: cookie.rs  framing.rs  mod.rs  params.rs  pipe.rs  results.rs  states.rs
netsu-rs/src/streams/: channel.rs  mod.rs  runner.rs
netsu-rs/src/transport/: iroh.rs  mod.rs  tcp.rs  udp.rs  ws.rs
netsu-rs/src/transport/quic/: channel.rs  endpoint.rs  mod.rs  observe.rs  tls.rs
netsu-rs/src/transport/webrtc/: channel.rs  config.rs  metrics.rs  mod.rs  peer.rs  pipe.rs  signaling.rs
netsu-rs/tests/: cli.rs  client_hang_regressions.rs  client_iperf3.rs  iroh_rustls_provider.rs  iroh_transport.rs  mux_local.rs  quic_e2e.rs  quic_transport.rs  rs_to_rs.rs  rustls_provider.rs  server_iperf3.rs  tcp_transport.rs  ts_interop.rs  udp_interop.rs  verify_script.rs  webrtc_cli.rs  webrtc_peer.rs  webrtc_pipe.rs  webrtc_signaling.rs  webrtc_transport.rs  ws.rs  ws_reassembly.rs
netsu-rs/tests/common/: mod.rs
scripts/: dev-webrtc-signal.sh
