[package]
name = "netsu"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "iperf3-compatible network speed test — library and CLI"
repository = "https://github.com/HuakunShen/netsu"
readme = "README.md"
keywords = ["iperf3", "network", "benchmark", "speedtest", "bandwidth"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["tests/", "/target"]

[lib]
name = "netsu"
path = "src/lib.rs"

[[bin]]
name = "netsu"
path = "src/main.rs"

[features]
# Default build is the smallest iperf3-compatible TCP+UDP tool. Every
# non-core transport is opt-in so it only adds binary size when enabled.
default = []
ws = ["dep:tokio-tungstenite", "dep:futures-util"]

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "io-util", "sync", "signal"] }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
async-trait = "0.1"
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
libc = "0.2"

# Size-optimized release: netsu is a benchmark, so keep opt-level=3 (small-code
# opt would slow the measurement hot loops); buy size from LTO + strip + abort.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
