[package]
name = "netsu"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "iperf3-compatible network speed test — library and CLI"
repository = "https://github.com/HuakunShen/netsu"
readme = "README.md"
keywords = ["iperf3", "network", "benchmark", "speedtest", "bandwidth"]
categories = ["command-line-utilities", "network-programming"]
exclude = ["tests/", "/target"]

[lib]
name = "netsu"
path = "src/lib.rs"

[[bin]]
name = "netsu"
path = "src/main.rs"

[features]
# Default build is the smallest iperf3-compatible TCP+UDP tool. Every
# non-core transport is opt-in so it only adds binary size when enabled.
default = []
ws = ["dep:tokio-tungstenite", "dep:futures-util"]
# iroh: the iroh/QUIC transport + (later) the mux lab + rendez-key. Deps are
# added to this list as each phase introduces them.
iroh = [
  "dep:iroh", "dep:iroh-tickets", "dep:reqwest",
  "dep:bytes", "dep:rand_chacha", "dep:uuid", "dep:postcard", "dep:hdrhistogram", "dep:humantime",
  "dep:schemars", "dep:sysinfo",
]
# TUI launcher + live dashboard. Independent of iroh; its iroh/mux screens are
# additionally cfg(feature = "iroh").
tui = ["dep:ratatui"]
# kbm sharing demo (examples/kbm-demo.rs): OS input capture/injection via monio.
# Implies iroh (the demo runs over one iroh connection). serde_json is a core dep.
input-demo = ["iroh", "dep:monio"]

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "io-util", "sync", "signal"] }
tokio-tungstenite = { version = "0.24", optional = true }
futures-util = { version = "0.3", optional = true }
iroh = { version = "=1.0.2", optional = true }
iroh-tickets = { version = "=1.0.0", optional = true }
# Shares the reqwest already in iroh's tree; rustls avoids an OpenSSL dep.
reqwest = { version = "0.13", optional = true, default-features = false, features = ["rustls"] }
# mux lab (Phase 4+): deterministic payloads, latency histograms, framing.
bytes = { version = "1", optional = true }
rand_chacha = { version = "0.3", optional = true }
uuid = { version = "1", optional = true, features = ["v4", "serde"] }
postcard = { version = "1", optional = true, features = ["alloc"] }
hdrhistogram = { version = "7", optional = true }
humantime = { version = "2", optional = true }
schemars = { version = "1", optional = true }
sysinfo = { version = "0.37", optional = true }
ratatui = { version = "0.30", optional = true }
monio = { version = "=0.1.1", optional = true, features = ["tokio", "recorder"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
rand = "0.8"
async-trait = "0.1"
socket2 = { version = "0.5", features = ["all"] }

[[example]]
name = "kbm-demo"
required-features = ["input-demo"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
libc = "0.2"

# Size-optimized release: netsu is a benchmark, so keep opt-level=3 (small-code
# opt would slow the measurement hot loops); buy size from LTO + strip + abort.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
